[package]
name = "active-campaign"
version = "0.1.0"
edition = "2021"

[lib]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
name = "active_campaign"
path = "src/lib.rs"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.17", features = ["blocking", "json"]}
serde = { version = "1.0.162", features = ["derive"]}
dotenvy = "0.15.7"
once_cell = "1.17.1"
csv = "1.2.1"
serde_json = "1.0.96"
thiserror = "1.0.40"
paste = "1.0.12"
api-client-macro = "0.1.1"
